ENH: Node server scs3 parsing, fix some visualization on threejs

--- a/views/index.jade
+++ b/views/index.jade
@@ -17,5 +17,9 @@ script(src="javascripts/libs/Detector.js")
 script(src="javascripts/libs/dat.gui.min.js")
 script(src="javascripts/libs/stats.min.js")
 
-script(src="javascripts/SCS3Parser.js")
+script(src="javascripts/libs/gl-matrix-min.js")
+
+#script(src="javascripts/SCS3Parser.js")
+#script(src="javascripts/rendering.js")
 script(src="javascripts/threejs_rendering.js")
+#script(src="javascripts/glow_rendering.js")
